--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>I live in Tennessee, but I grew up in a small town in Maine. While I will always miss the tight community and wonderful people, I do not miss the winters!</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>My Passion: Books! The ability to travel to new worlds and share experiences I would otherwise never encounter is only one of the many reasons I can dive into a book and spend hours traversing the unknown realms within.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>Fun Fact! I have five older sisters and not one of them can code!</p>
             </div>
         </section>    
 
